# praxis

./: .dockerignore  .gitignore  AGENTS.md  ASTRBOT_FINDINGS.md  CLAUDE.md  CLAWORK_FINDINGS.md  CODE_REVIEW_HERMES.md  CODE_REVIEW_MEMORY_SEARCH_VEX.md  CODE_REVIEW_PHASE2A_VEX.md  CODE_REVIEW_PHASE2B_VEX.md  CODE_REVIEW_TUCK.md  CODE_REVIEW_VEX.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ECOSYSTEM_RESEARCH.md  ECOSYSTEM_REVIEW.md  GAP_ANALYSIS_HERMES.md  GAP_ANALYSIS_HERMES_OPENCLAW.md  HERMES_PORT_ANALYSIS.md  IMPLEMENTATION_PLAN.md  MEMU_FINDINGS.md  MOLTIS_IRONCLAW_DEEP_DIVE.md  NANOBOT_FINDINGS.md  NEEDS_FINISHED.md  NULLCLAW_FINDINGS.md  PLAN_SCOUT.md  PLAN_TUCK.md  PRAXIS_DESIGN.md  PRAXIS_FEATURES_VS_HERMES.md  PRAXIS_GAPS.md  PRAXIS_NEW_FEATURES.md  PRAXIS_TO_HERMES_PORT.md  PRAXIS_WORK_MARKETPLACE.md  Praxis_More.md  README.md  SHELLDEX_FEATURE_HARVEST.md  SHELLDEX_REGISTRY.md  SPACEBOT_FINDINGS.md  STATUS.md  (+4 more)
.cargo/: audit.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: PRE_BUILD_DESIGN_REVIEW.md  agent_runtime.md  roadmap.md
docs/architecture/: 5-tier-memory-build-spec.md  gap-analysis-axon-heritage.md
docs/modules/: a2a.md  anatomy.md  archive.md  argus.md  attachments.md  backend.md  backup.md  bench.md  boundaries.md  brief.md  browser.md  browser_pwa.md  bus.md  canary.md  channels.md  checkpoints.md  circuit_breaker.md  cli.md  config.md  context.md  cost.md  crypto.md  curator.md  daemon.md  dashboard.md  delegation.md  docker_isolation.md  embedding_cache.md  events.md  evolution.md  examples.md  forensics.md  gitclaw.md  graceful_shutdown.md  hands.md  health.md  heartbeat.md  hooks.md  hotreload.md  identity.md  (+52 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: check-heartbeat.sh
skills/agent-conversation-forensics/: SKILL.md
skills/auxiliary-model-configuration/: SKILL.md
skills/book-proofread-errata-template/: SKILL.md
skills/breaking-news-monitor/: SKILL.md
skills/caddy-subdirectory-static-sites/: SKILL.md
skills/code-refactoring-audit/: SKILL.md
skills/codex/: SKILL.md
skills/discord-agent-channel-routing/: SKILL.md
skills/discord-agent-interaction/: SKILL.md
skills/discord-agent-mention-configuration/: SKILL.md
skills/discord-council-debate-fix/: SKILL.md
skills/ffmpeg-video-clip-stitch/: SKILL.md
skills/free-image-generation/: SKILL.md
skills/github-social-poster/: SKILL.md
skills/hermes-agent/: SKILL.md
skills/hermes-custom-provider-cross-profile/: SKILL.md
skills/hermes-hindsight-troubleshooting/: SKILL.md
skills/hermes-multi-agent-discord/: SKILL.md
skills/multi-agent-approval-checkpoint/: SKILL.md
skills/project-familiarization/: SKILL.md
skills/project-readiness-review/: SKILL.md
skills/rust-auth-security-review/: SKILL.md
skills/system-health-alerting/: SKILL.md
skills/systematic-debugging/: SKILL.md
skills/video-segment-extract-concat/: SKILL.md
skills/writer-agent-setup/: SKILL.md
skills/x-poster-playwright/: SKILL.md
src/: anatomy.rs  anomaly.rs  attachments.rs  backup.rs  boundaries.rs  browser.rs  browser_pwa.rs  canary.rs  channels.rs  checkpoints.rs  circuit_breaker.rs  cli.rs  config.rs  cost.rs  crypto.rs  daemon.rs  daytona_backend.rs  delegation.rs  docker_isolation.rs  embedding_cache.rs  events.rs  evolution.rs  examples.rs  gitclaw.rs  graceful_shutdown.rs  hands.rs  health.rs  hooks.rs  hotreload.rs  injection.rs  ironclaw.rs  leaks.rs  lib.rs  lite.rs  main.rs  merkle.rs  mobile.rs  modal_backend.rs  model_catalog.rs  onchain_reputation.rs  (+32 more)
src/a2a/: README.md  client.rs  mod.rs  types.rs
src/anatomy/: README.md
src/anomaly/: README.md  mod.rs
src/archive/: README.md  audit.rs  bundle.rs  mod.rs  snapshots.rs  tree.rs
src/argus/: README.md  drift.rs  mod.rs  patterns.rs  render.rs
src/attachments/: README.md
src/backend/: README.md  attempts.rs  claude.rs  configured.rs  credential_pool.rs  gating.rs  gemini.rs  health.rs  mod.rs  model_override.rs  ollama.rs  openai.rs  prompts.rs  provider_routes.rs  retry.rs  rule.rs  streaming.rs  transport.rs
src/bench/: README.md  mod.rs
src/boundaries/: README.md
src/brief/: README.md  mod.rs
src/bus/: README.md  mod.rs
src/canary/: README.md
src/canvas/: mod.rs
src/carapace/: mod.rs
src/cli/: README.md  acp.rs  agents.rs  approvals.rs  archive.rs  argus.rs  boundaries.rs  brief.rs  canary.rs  chat.rs  checkpoint.rs  core.rs  daemon.rs  delegation.rs  discord.rs  dryrun.rs  ephemeral.rs  evolution.rs  fallback.rs  forensics.rs  git.rs  hands.rs  heartbeat.rs  hooks.rs  kanban.rs  learning.rs  mcp.rs  memory.rs  migrate.rs  mod.rs  model.rs  models.rs  oauth.rs  profile.rs  sandbox.rs  serve.rs  skills_cmd.rs  slack.rs  telegram.rs  tools.rs  (+8 more)
src/config/: README.md  mod.rs  model.rs  security.rs  tests.rs  validation.rs  watcher.rs
src/context/: README.md  adaptive.rs  budget.rs  cache.rs  compaction.rs  files.rs  handoff.rs  injection.rs  loader.rs  mod.rs  progressive.rs  request.rs  summarize.rs
src/crypto/: README.md  zeroize.rs
src/curator/: README.md  mod.rs
src/daemon/: README.md  mod.rs
src/dashboard/: README.md  helpers.rs  mod.rs  model_stats.rs  routes_admin.rs  routes_control.rs  routes_core.rs  routes_events.rs  routes_learning.rs  routes_memory.rs  routes_plugins.rs  server.rs  types.rs
src/delegation/: README.md
src/embedding/: mod.rs
src/events/: README.md  file.rs  mod.rs
src/evolution/: README.md
src/examples/: README.md
src/federation/: mod.rs
src/forensics/: README.md  mod.rs
tests/: cli.rs  cli_agents.rs  cli_archive.rs  cli_argus.rs  cli_ask.rs  cli_attachments.rs  cli_boundaries.rs  cli_budgets.rs  cli_canary.rs  cli_context_adaptive.rs  cli_forensics.rs  cli_foundation.rs  cli_heartbeat.rs  cli_learning.rs  cli_learning_notes.rs  cli_postmortems.rs  cli_profiles.rs  cli_providers.rs  cli_quality.rs  cli_run.rs  cli_snapshots.rs  cli_tool_docs.rs  cli_tools.rs  cli_tools_execution.rs  replay_runtime.rs
(+270 files in other folders)
