[package]
name = "praxis"
version = "0.1.0"
edition = "2024"
description = "A self-evolving personal AI agent foundation — 0 dead-code warnings"
license = "MIT"

# ── Optional feature flags ───────────────────────────────────────────────────
#
# tui      — full-screen ratatui terminal dashboard (`praxis tui`)
# discord  — Discord webhook adapter (`praxis discord`)
# slack    — Slack Events API adapter (`praxis slack`)
#
# All three are on by default.  To build a smaller binary, disable defaults
# and re-enable only what you need:
#
#   cargo build --no-default-features --features tui
#
[features]
default = ["tui", "discord", "slack"]
tui     = ["dep:crossterm", "dep:ratatui"]
discord = []
slack   = []
kanban  = []
wasm    = ["dep:wasmtime"]

[dependencies]
aes-gcm = "0.10"
async-stream = "0.3"
anyhow = "1"
env_logger = "0.11"
log = "0.4"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = { version = "0.28", optional = true }
ratatui = { version = "0.29", optional = true }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
rustc-hash = "2"
tungstenite = "0.26"
tokio-tungstenite = "0.26"
libloading = "0.8"
url = "2"
dirs = "5"
urlencoding = "2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
serde_yaml = "0.9"
rand = "0.8"
regex = "1"
ed25519-dalek = "2"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
tokio ={ version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
toml = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
lettre = { version = "0.11.22", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
imap = { version = "3.0.0-alpha.15", default-features = false, features = ["rustls-tls"] }
native-tls = "0.2"
tokio-cron-scheduler = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
notify = { version = "9.0.0-rc.4", default-features = false, features = ["macos_kqueue"] }
dialoguer = "0.11"
flate2 = "1"
once_cell = "1"
tar = "0.4"
tempfile = "3"
wasmtime = { version = "44", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio-test = "0.4"

[[bin]]
name = "praxis"
path = "src/main.rs"

[[bin]]
name = "praxis-watchdog"
path = "src/watchdog/main.rs"

[profile.release]
opt-level = 2
lto = "thin"
strip = true